Collectors.toList() to toList().