@@ -36,7 +36,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import java.util.function.UnaryOperator;
-import java.util.stream.Collectors;
 import java.util.stream.DoubleStream;
 
 /**
@@ -73,7 +72,7 @@ public class TimeBasedDevoLocomotion extends DevoLocomotion {
       Settings settings
   ) {
     List<Double> developmentSchedule = DoubleStream.iterate(interval, d -> d + interval)
-        .limit((long) Math.floor(maxT / interval)).sorted().boxed().collect(Collectors.toList());
+        .limit((long) Math.floor(maxT / interval)).sorted().boxed().toList();
     return new TimeBasedDevoLocomotion(developmentSchedule, maxT, groundProfile, settings);
   }
 
